@@ -525,3 +525,298 @@ class RectangleGenerator(ParticleGenerator):
                                       kernel=self.kernel,
                                       dim=3)
             output.m[:] = m
+
+
+################################################################################
+# `CuboidGenerator` class.
+################################################################################
+class CuboidGenerator(ParticleGenerator):
+    """
+    Class to generate cuboids of particles (filled and hollow).
+    """
+    def __init__(self, 
+                 output_particle_arrays=[],
+                 particle_mass=-1.0,
+                 mass_computation_mode=MCM.Compute_From_Density,
+                 particle_density=1000.0,
+                 density_computation_mode=DCM.Set_Constant,
+                 particle_h=0.1,
+                 kernel=None,
+                 filled=True,
+                 exclude_top=False,
+                 start_point=Point(0, 0, 0),
+                 end_point=Point(1, 1, 1),
+                 particle_spacing_x=0.1,
+                 particle_spacing_y=0.1,
+                 particle_spacing_z=0.1,
+                 end_points_exact=True,
+                 tolerance=1e-09,
+                 *args,
+                 **kwargs):
+        """
+        Constructor.
+        """
+        self.filled = filled
+        self.exclude_top = exclude_top
+        self.start_point = Point(start_point.x,
+                                 start_point.y,
+                                 start_point.z)
+        self.end_point = Point(end_point.x,
+                                end_point.y,
+                                end_point.z)
+        
+        self.particle_spacing_x = particle_spacing_x
+        self.particle_spacing_y = particle_spacing_y
+        self.particle_spacing_z = particle_spacing_z
+
+        self.end_points_exact = end_points_exact
+        self.tolerance = tolerance
+        
+    def num_output_arrays(self):
+        """
+        Number of particle arrays generated by this generated.
+        """
+        return 1
+
+    def validate_setup(self):
+        """
+        Make sure the input is valid.
+        """
+        if ParticleGenerator.validate_setup(self) == False:
+            return False
+        
+        return self._validate_input_points()
+
+    def _validate_input_points(self):
+        """
+        Make sure the end points input are proper.
+        """
+        length = self.end_point.x - self.start_point.x
+        depth = self.end_point.y - self.start_point.y
+        width = self.end_point.z - self.start_point.z
+
+        if (self.particle_spacing_x < 0.0 or
+            self.particle_spacing_y < 0.0 or
+            self.particle_spacing_z < 0.0 or
+            abs(length)-self.particle_spacing_x < 0. or
+            abs(depth)-self.particle_spacing_y < 0. or
+            abs(width)-self.particle_spacing_z < 0.):
+            msg = 'Incorrect input paramters specified'
+            logger.error(msg)
+            return False
+
+        return True
+            
+    def get_coords(self):
+        """
+        Returns 3 numpy arrays representing the coordinates of the generated points.
+        """
+        start_point, end_point, length, depth, width = self._get_end_points()
+        
+        particle_spacing_x, nx = find_best_particle_spacing(
+            length=length, 
+            initial_spacing=self.particle_spacing_x)
+        particle_spacing_y, ny = find_best_particle_spacing(
+            length=depth,
+            initial_spacing=self.particle_spacing_y)
+        particle_spacing_z, nz = find_best_particle_spacing(
+            length=width,
+            initial_spacing=self.particle_spacing_z)
+
+        logger.info('x-spacing : %f, nx : %d'\
+                        %(particle_spacing_x, nx))
+        logger.info('y-spacing : %f, ny : %d'\
+                        %(particle_spacing_y, ny))
+        logger.info('z-spacing : %f, nz : %d'\
+                        %(particle_spacing_z, nz))
+
+        if self.filled == True:
+            return  self._generate_filled_cuboid(start_point, end_point, 
+                                                 nx, ny, nz,
+                                                 particle_spacing_x, 
+                                                 particle_spacing_y,
+                                                 particle_spacing_z)
+        else:
+            return self._generate_empty_cuboid(start_point, end_point,
+                                               nx, ny, nz,
+                                               particle_spacing_x,
+                                               particle_spacing_y,
+                                               particle_spacing_z)        
+    def generate_func(self):
+        """
+        Generate the complete particle array with the required properties computed.
+        """
+        self._setup_outputs()
+
+        # compute the coords.
+        x, y, z= self.get_coords()
+        
+        # add the generated particles to the output particle array
+        output = self.output_particle_arrays[0]
+        output.add_particles(x=x, y=y, z=z)
+        
+        # check if 'h' has to be set
+        if self.particle_h > 0.:
+            output.h[:] = self.particle_h
+
+        # check if the density is to be set.
+        if self.density_computation_mode == DCM.Set_Constant:
+            output.rho[:] = self.particle_density
+        
+        # check if the mass has to be computed.
+        if self.mass_computation_mode == MCM.Set_Constant:
+            output.m[:] = self.particle_mass
+        elif self.mass_computation_mode == MCM.Compute_From_Density:
+            m = compute_particle_mass(density=self.particle_density,
+                                      h=self.particle_h,
+                                      parray=output,
+                                      kernel=self.kernel,
+                                      dim=3)
+            output.m[:] = m
+        
+    def _get_end_points(self):
+        """
+        Return changed end points so that start_point to end_point is moving in
+        positive direction for all coords.
+        """
+        length = self.end_point.x - self.start_point.x
+        depth = self.end_point.y - self.start_point.y
+        width = self.end_point.z - self.start_point.z
+
+        start_point = Point()
+        end_point = Point()
+
+        if length < 0:
+            start_point.x = self.end_point.x
+            end_point.x = self.start_point.x
+        else:
+            start_point.x = self.start_point.x
+            end_point.x = self.end_point.x
+
+        if depth < 0:
+            start_point.y = self.end_point.y
+            end_point.y = self.start_point.y
+        else:
+            start_point.y = self.start_point.y
+            end_point.y = self.end_point.y
+
+        if width < 0:
+            start_point.z = self.end_point.z
+            end_point.z = self.start_point.z
+        else:
+            start_point.z = self.start_point.z
+            end_point.z = self.end_point.z
+            
+        return start_point, end_point, abs(length), abs(depth), abs(width)
+
+    def _generate_empty_cuboid(self, start_point, end_point, nx, ny, nz,
+                               particle_spacing_x, particle_spacing_y,
+                               particle_spacing_z):
+        """
+        """
+        logger.info('Input num pts : %d %d %d'%(nx, ny, nz))
+
+        if self.exclude_top is True:
+            ny -= 1
+
+        n = 0
+        n += 2*nx*ny # for the z-max and z-min planes
+        nz -= 2
+        
+        if self.exclude_top is False:
+            n += 2*nx*nz # for the y-max and y-min planes
+            ny -= 2
+        else:
+            n += nx*nz
+            ny -= 1        
+
+        n += 2*ny*nz # for the x-max and x-min planes
+
+        if self.exclude_top is False:
+            ny += 2
+        else:
+            ny += 1
+
+        nz += 2
+        
+        x = numpy.zeros(n, dtype=float)
+        y = numpy.zeros(n, dtype=float)
+        z = numpy.zeros(n, dtype=float)
+
+        pindx = 0
+
+        logger.info('Now using num pts : %d %d %d'%(nx, ny, nz))
+        logger.info('Computed number of points : %d'%(n))
+        
+        # generate the z-min and max planes
+        for i in range(nx):
+            for j in range(ny):
+                x[pindx] = start_point.x + i*particle_spacing_x
+                y[pindx] = start_point.y + j*particle_spacing_y
+                z[pindx] = start_point.z
+                pindx += 1
+        for i in range(nx):
+            for j in range(ny):
+                x[pindx] = start_point.x + i*particle_spacing_x
+                y[pindx] = start_point.y + j*particle_spacing_y
+                z[pindx] = end_point.z
+                pindx += 1
+
+        # generate the bottom and top planes
+        for i in range(nx):
+            for k in range(nz-2):
+                x[pindx] = start_point.x + i*particle_spacing_x
+                y[pindx] = start_point.y
+                z[pindx] = start_point.z + (k+1)*particle_spacing_z
+                pindx += 1
+        if self.exclude_top is False:
+            for i in range(nx):
+                for k in range(nz-2):
+                    x[pindx] = start_point.x + i*particle_spacing_x
+                    y[pindx] = end_point.y
+                    z[pindx] = start_point.z + (k+1)*particle_spacing_z
+                    pindx += 1
+
+        # generate the left and right planes
+        if self.exclude_top is True:
+            ny += 1
+
+        for j in range(ny-2):
+            for k in range(nz-2):
+                x[pindx] = start_point.x
+                y[pindx] = start_point.y + (j+1)*particle_spacing_y
+                z[pindx] = start_point.z + (k+1)*particle_spacing_z
+                pindx += 1
+        for j in range(ny-2):
+            for k in range(nz-2):
+                x[pindx] = end_point.x
+                y[pindx] = start_point.y + (j+1)*particle_spacing_y
+                z[pindx] = start_point.z + (k+1)*particle_spacing_z
+                pindx += 1
+
+        logger.info('Last pindx value : %d'%(pindx))
+        return x, y, z
+
+    def _generate_filled_cuboid(self, start_point, end_point, nx, ny, nz,
+                                particle_spacing_x, particle_spacing_y,
+                                particle_spacing_z):
+        """
+        """
+        n = nx*ny*nz
+
+        x = numpy.zeros(n, dtype=float)
+        y = numpy.zeros(n, dtype=float)
+        z = numpy.zeros(n, dtype=float)
+        
+        pindx = 0
+
+        for i in range(nx):
+            for j in range(ny):
+                for k in range(nz):
+                    x[pindx] = start_point.x + i*particle_spacing_x
+                    y[pindx] = start_point.y + j*particle_spacing_y
+                    z[pindx] = start_point.z + k*particle_spacing_z
+                    pindx += 1
+
+        return x, y, z
+
