@@ -1004,9 +1004,10 @@ cdef class SolverBase(Base):
             e.add_arrays_to_cell_manager(self.cell_manager)
 
         min_cell_size, max_cell_size = self._compute_cell_sizes()
-        
-        self.cell_manager.min_cell_size = min_cell_size
-        self.cell_manager.max_cell_size = max_cell_size
+
+        if max_cell_size != -1 or max_cell_size != -1:
+            self.cell_manager.min_cell_size = min_cell_size
+            self.cell_manager.max_cell_size = max_cell_size
 
         # initialize the cell manager.
         self.cell_manager.initialize()
@@ -1045,17 +1046,22 @@ cdef class SolverBase(Base):
         sizes manually.
         """
         cdef double min_h = 100.0
-        
+        cdef bint size_computed = False
         for e in self.entity_list:
             parr = e.get_particle_array()
-            if parr is None:
+            if parr is None or parr.get_number_of_particles() == 0:
                 continue
             h = parr.h
             if h is None:
                 continue
             min_h1 = numpy.min(h)*2.0
+            size_computed = True
             if min_h1 < min_h:
                 min_h = min_h1
+
+        if size_computed == False:
+            logger.info('No particles found - using default cell sizes')
+            return -1, -1
 
         logger.info('using cell size of %f'%(min_h))
         return min_h, min_h
